refactor metrics routes
