# api_docs.yml
@@ -2,7 +2,7 @@
 basepath: "/"
 
 paths:
-  "/projects/{project_id}/metrics/cpu":
+  "/projects/{resource}/metrics":
     post:
       tags:
         - projects
@@ -17,7 +17,7 @@ paths:
           description: "Bearer [token]"
           type: string
         - in: path
-          name: project_id
+          name: resource
           required: true
           type: string
         - in: body
@@ -32,46 +32,9 @@ paths:
                 format: float
               step:
                 type: string
-
-      responses:
-        200:
-          description: "Cpu metrics for a Project"
-        404:
-          description: "metrics not found"
-        400:
-          description: "Bad request"
-        500:
-          description: "Internal Server Error"
-
-  "/projects/{project_id}/metrics/memory":
-    post:
-      tags:
-        - projects
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - in: header
-          name: Authorization
-          required: true
-          description: "Bearer [token]"
-          type: string
-        - in: path
-          name: project_id
-          required: true
-          type: string
-        - in: body
-          name: project metrics
-          schema:
-            properties:
-              start:
-                type: number
-                format: float
-              end:
-                type: number
-                format: float
-              step:
+              project_id:
+                type: string
+              project_name:
                 type: string
 
       responses:
@@ -84,48 +47,7 @@ paths:
         500:
           description: "Internal Server Error"
 
-  "/projects/{project_id}/metrics/network":
-    post:
-      tags:
-        - projects
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - in: header
-          name: Authorization
-          required: true
-          description: "Bearer [token]"
-          type: string
-        - in: path
-          name: project_id
-          required: true
-          type: string
-        - in: body
-          name: project metrics
-          schema:
-            properties:
-              start:
-                type: number
-                format: float
-              end:
-                type: number
-                format: float
-              step:
-                type: string
-
-      responses:
-        200:
-          description: "Network metrics for a single Project"
-        404:
-          description: "Project metrics not found"
-        400:
-          description: "Bad request"
-        500:
-          description: "Internal Server Error"
-
-  "/projects/{project_id}/apps/{app_id}/metrics/memory":
+  "/apps/{resource}/metrics":
     post:
       tags:
         - apps
@@ -140,11 +62,7 @@ paths:
           description: "Bearer [token]"
           type: string
         - in: path
-          name: project_id
-          required: true
-          type: string
-        - in: path
-          name: app_id
+          name: resource
           required: true
           type: string
         - in: body
@@ -159,100 +77,18 @@ paths:
                 format: float
               step:
                 type: string
-
-      responses:
-        200:
-          description: "Metrics for a single App"
-        404:
-          description: "App metrics not found"
-        400:
-          description: "Bad request"
-        500:
-          description: "Internal Server Error"
-
-  "/projects/{project_id}/apps/{app_id}/metrics/cpu":
-    post:
-      tags:
-        - apps
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - in: header
-          name: Authorization
-          required: true
-          description: "Bearer [token]"
-          type: string
-        - in: path
-          name: project_id
-          required: true
-          type: string
-        - in: path
-          name: app_id
-          required: true
-          type: string
-        - in: body
-          name: app metrics
-          schema:
-            properties:
-              start:
-                type: number
-                format: float
-              end:
-                type: number
-                format: float
-              step:
+              project_id:
+                type: string
+              project_name:
+                type: string
+              app_id:
+                type: string
+              app_name:
                 type: string
 
       responses:
         200:
           description: "Cpu metrics for a single App"
-        404:
-          description: "App metrics not found"
-        400:
-          description: "Bad request"
-        500:
-          description: "Internal Server Error"
-
-  "/projects/{project_id}/apps/{app_id}/metrics/network":
-    post:
-      tags:
-        - apps
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - in: header
-          name: Authorization
-          required: true
-          description: "Bearer [token]"
-          type: string
-        - in: path
-          name: project_id
-          required: true
-          type: string
-        - in: path
-          name: app_id
-          required: true
-          type: string
-        - in: body
-          name: app metrics
-          schema:
-            properties:
-              start:
-                type: number
-                format: float
-              end:
-                type: number
-                format: float
-              step:
-                type: string  
-
-      responses:
-        200:
-          description: "Network metrics for a single App"
         404:
           description: "App metrics not found"
         400:
