# app/schemas/monitoring_metrics.py
@@ -2,14 +2,17 @@ from marshmallow import Schema, fields, validate
 
 
 class MetricsSchema(Schema):
-
     start = fields.Float()
     end = fields.Float()
     step = fields.String(validate=[
-        validate.Regexp(
-            regex=r'^(?!\s*$)', error='step value should be a valid string'
-        )
+        validate.OneOf(["year", "month"],
+                       error='set_by should be year or month'
+                       )
     ])
+    project_id = fields.String()
+    project_name = fields.String()
+    app_name = fields.String()
+    app_id = fields.String()
 
 
 class UserGraphSchema(Schema):
